--- a/index.html
+++ b/index.html
@@ -4,13 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <script src="/__/firebase/6.2.3/firebase-app.js"></script>
-
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#reserved-urls -->
-
-  <!-- Initialize Firebase -->
-  <script src="/__/firebase/init.js"></script>
+  <!-- <script src="/__/firebase/6.2.3/firebase-app.js"></script>
+  <script src="/__/firebase/init.js"></script> -->
   <title>to-do-list</title>
 </head>
 
